# llm-twin

./: .gitignore  Dockerfile  README.md  docker-compose-testing.yaml  docker-compose.yml  example.env  makefile  pyproject.toml
.github/workflows/: ci.yaml
orchestration/pipelines/: _dummy.py
orchestration/steps/: __init__.py  _dummy.py
orchestration/steps/etl/: get_or_create_user.py
src/llm_twin/: main.py  settings.py
src/llm_twin/application/utils/: __init__.py
src/llm_twin/config/: __init__.py  _dependencies.py  _settings.py
src/llm_twin/data/documents/: __init__.py  _base.py  _config.py  _mongodb.py  _user.py
src/llm_twin/domain/: inference.py
src/llm_twin/domain/crawling/: __init__.py  _dispatcher.py
src/llm_twin/domain/crawling/_crawlers/: __init__.py  _base.py  _broken.py  _fake.py  _github.py  _medium.py
src/llm_twin/domain/dataset_generation/: __init__.py  _datasets.py  _generation.py  _prompts.py  _utils.py
src/llm_twin/domain/documents/: __init__.py  _article.py  _base.py  _db.py  _repository.py  _users.py
src/llm_twin/domain/etl/: raw_documents.py
src/llm_twin/domain/etl/crawling/: __init__.py  _dispatcher.py
src/llm_twin/domain/etl/raw_documents/: __init__.py  _article.py  _authors.py  _base.py  _repository.py
src/llm_twin/domain/evaluation/: __init__.py  _models.py
src/llm_twin/domain/feature_engineering/chunking/: __init__.py  _dispatcher.py  _documents.py
src/llm_twin/domain/feature_engineering/cleaning/: __init__.py  _cleaners.py  _dispatcher.py  _documents.py  _vectors.py
src/llm_twin/domain/feature_engineering/embedding/: __init__.py  _dispatcher.py  _documents.py  _embedders.py  _model.py
src/llm_twin/domain/models/: __init__.py  _cross_encoder.py  _embedding.py  _language.py  _singleton.py
src/llm_twin/domain/rag/: __init__.py  _augmentation.py  _config.py  _query_expansion.py  _reranking.py  _retrieval.py
src/llm_twin/domain/rag/_retrieval/: __init__.py  _query_expansion.py  _reranking.py  _retrieval.py
src/llm_twin/domain/raw_documents/: __init__.py  _article.py  _base.py  _db.py  _repository.py  _users.py
src/llm_twin/domain/storage/document/: __init__.py  _db.py  _document.py
src/llm_twin/domain/storage/vector/: __init__.py  _db.py  _vector.py
src/llm_twin/domain/training/: __init__.py  _constants.py  _data_loader.py
src/llm_twin/domain/training/_data_loader/: __init__.py  _base.py  _hugging_face.py  _vector_db.py
src/llm_twin/domain/training/_fine_tuning_strategy/: __init__.py  _base.py  _constants.py  _direct_preference_optimisation.py  _supervised_fine_tuning.py
src/llm_twin/domain/training/_runner/: __init__.py  _base.py  _finetune.py  _sagemaker.py
src/llm_twin/domain/training/_trainer/: __init__.py  _base.py  _finetune.py  _sagemaker.py
src/llm_twin/infrastructure/db/: mongo.py  qdrant.py
src/llm_twin/infrastructure/documents/: _config.py  _in_memory.py  _mongodb.py
src/llm_twin/interfaces/api/: main.py
src/llm_twin/interfaces/cli/: _exceptions.py  etl.py  run.py
src/llm_twin/interfaces/cli/config-files/: ed-wilson.yaml  jackof-alltrades.yaml
src/llm_twin/interfaces/cli/etl/: run.py
src/llm_twin/interfaces/cli/etl_user_data/: run.py
src/llm_twin/orchestration/pipelines/: __init__.py  _dataset_generation.py  _dummy.py  _etl.py  _etl_user_data.py  _evaluation.py  _feature_engineering.py  _rag.py  _train.py  _train_locally.py  _training.py
src/llm_twin/orchestration/steps/: __init__.py  _materializers.py  context.py  types.py
src/llm_twin/orchestration/steps/dataset_generation/: __init__.py  _create_prompts_for_generating_samples.py  _create_sample_generation_prompts.py  _fetch_chunked_documents.py  _generate_sample_dataset.py  _types.py
src/llm_twin/orchestration/steps/etl/: __init__.py  _crawl_links.py  _get_or_create_author.py  _get_or_create_user.py  get_or_create_user.py
src/llm_twin/orchestration/steps/evaluation/: __init__.py  _aggregate_evaluations.py  _evaluate_answers.py  _evaluate_completions.py  _generate_answers.py  (+1 more)
src/llm_twin/utils/: __init__.py  _names.py  _split_user_full_name.py
testing/: settings.py
testing/factories/: _base.py  _mixins.py  dataset.py  documents.py  evaluation.py  rag.py  vectors.py
testing/helpers/: chunking.py  config.py  context.py  embeddings.py  inference.py  infrastructure.py  settings.py  training.py  zenml.py
testing/helpers/models/: __init__.py  _cross_encoder.py  _embeddings.py  _language.py
testing/helpers/storage/: __init__.py  _document.py  _vector.py
testing/helpers/training/: __init__.py  _data_loaders.py  _trainers.py
tests/: conftest.py
tests/functional/: conftest.py
tests/functional/api/: test_main.py
tests/functional/cli/: test_etl.py  test_run.py
tests/functional/cli/etl/: test_run.py
tests/functional/cli/etl_user_data/: test_run.py
tests/integration/: conftest.py
tests/integration/data/documents/: test_mongodb.py
tests/integration/domain/models/: test_cross_encoder.py  test_embedding.py
tests/integration/infrastructure/db/: test_mongo.py  test_qdrant.py
tests/integration/infrastructure/documents/: test_mongodb.py
tests/integration/orchestration/pipelines/: test_etl.py  test_etl_digital_data.py  test_etl_user_data.py  test_evaluation.py  test_feature_engineering.py  test_generate_sample_datasets.py  test_rag.py  test_train.py  test_train_locally.py
tests/unit/: conftest.py  test_main.py
tests/unit/data/documents/: test_config.py
tests/unit/data/in_memory/: test_in_memory.py
tests/unit/domain/crawling/: test_dispatcher.py
tests/unit/domain/dataset_generation/: test_datasets.py  test_generation.py  test_prompts.py
tests/unit/domain/evaluation/: test_models.py
tests/unit/domain/feature_engineering/: test_dispatcher.py
tests/unit/domain/models/: test_language.py
tests/unit/domain/rag/: test_augmentation.py  test_query_expansion.py  test_retrieval.py
tests/unit/infrastructure/db/: test_in_memory.py
tests/unit/infrastructure/documents/: test_config.py  test_in_memory.py
tests/unit/testing_helpers/: test_document_storage.py  test_vector_storage.py
(+58 files in other folders)
