[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "llm-twin"
version = "0.1.0"
description = "LLM twin project, following along with: https://github.com/PacktPublishing/LLM-Engineers-Handbook/"
readme = "README.md"
requires-python = ">=3.13"



# Dependencies

dependencies = [
    "bs4>=0.0.2",
    "chromedriver-autoinstaller>=0.6.4",
    "click>=8.1.3",
    "factory-boy>=3.3.3",
    "langchain>=0.3.23",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.11.2",
    "pytest-env>=1.1.5",
    "qdrant-client>=1.13.3",
    "selenium>=4.29.0",
    "sentence-transformers>=4.0.2",
    #  transformers>=4.5.1 currently breaking on MacOS.
    # TODO: remove once resolved. https://github.com/huggingface/transformers/issues/37326.
    "transformers<=4.50.3",
    "tqdm>=4.67.1",
    "zenml[server]>=0.75.0",
]

[dependency-groups]
ci = [
    "import-linter>=2.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
]

# Tooling

[tool.pytest.ini_options]
pythonpath = "./src/llm_twin"
filterwarnings = [
    "ignore:pkg_resources:DeprecationWarning:zenml",
    "ignore:The `schema` method is deprecated; use `model_json_schema` instead:pydantic.PydanticDeprecatedSince20:pydantic.main"
]

[tool.pytest_env]
MONGO_DATABASE_HOST = "mongodb://test_user:test_password@127.0.0.1:27018"
MONGO_DATABASE_NAME = "llm-twin-test"
QDRANT_DATABASE_PORT = 6335

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.importlinter]
root_package = "llm_twin"

[[tool.importlinter.contracts]]
name = "Top level layers"
type = "layers"
containers = "llm_twin"
layers = [
    "interfaces",
    "orchestration",
    "settings",
    "infrastructure",
    "domain",
    "utils",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Domain layer"
type = "layers"
containers = "llm_twin.domain"
layers = [
    "feature_engineering",
    "etl",
    "authors",
    "storage",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "ETL subdomain"
type = "layers"
containers = "llm_twin.domain.etl"
layers = [
    "crawling",
    "raw_documents",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Feature engineering subdomain"
type = "layers"
containers = "llm_twin.domain.feature_engineering"
layers = [
    "embedding",
    "chunking",
    "cleaning",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Storage subdomain"
type = "independence"
modules = [
    "llm_twin.domain.storage.document",
    "llm_twin.domain.storage.vector",
]

[[tool.importlinter.contracts]]
name = "Orchestration layer"
type = "layers"
containers = "llm_twin.orchestration"
layers = [
    "pipelines",
    "steps",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Orchestration steps"
type = "independence"
modules = [
    "llm_twin.orchestration.steps.etl",
    "llm_twin.orchestration.steps.feature_engineering",
]

[tool.ruff]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
# Sections
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["llm_twin", "tests"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"]  # Allow 'unused' imports in __init__.py files.
