[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "llm-twin"
version = "0.1.0"
description = "LLM twin project, following along with: https://github.com/PacktPublishing/LLM-Engineers-Handbook/"
readme = "README.md"
requires-python = ">=3.13"



# Dependencies

dependencies = [
    "bs4>=0.0.2",
    "chromedriver-autoinstaller>=0.6.4",
    "click>=8.1.3",
    "langchain>=0.3.23",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.11.2",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.0",
    #  transformers>=4.5.1 currently breaking on MacOS.
    # TODO: remove once resolved. https://github.com/huggingface/transformers/issues/37326.
    "transformers<=4.50.3",
    "tqdm>=4.67.1",
    "zenml[server]>=0.75.0",
    "openai>=1.75.0",
    "langchain-community>=0.3.21",
    "html2text>=2025.4.15",
    "datasets>=3.5.0",
    "trl>=0.17.0",
    "sagemaker>=2.92.0",
    "peft>=0.15.2",
    "comet-ml>=3.49.9",
]

[dependency-groups]
ci = [
    # Testing.
    "factory-boy>=3.3.3",
    "pytest>=8.3.5",
    "pytest-env>=1.1.5",
    "pytest-httpx>=0.35.0",
    "pytest-socket>=0.7.0",
    # Linting.
    "mypy>=1.15.0",
    "import-linter>=2.3",
    "ruff>=0.10.0",
]

# Tooling

[tool.pytest.ini_options]
pythonpath = "./src/llm_twin"
filterwarnings = [
    "ignore:pkg_resources:DeprecationWarning:zenml",
    "ignore::DeprecationWarning:sagemaker",
    "ignore:The `schema` method is deprecated; use `model_json_schema` instead:pydantic.PydanticDeprecatedSince20:pydantic.main"
]
# Only allow connecting to:
# - Local databases (MongoDB and Qdrant)
# - Hugging face, for loading pre-trained models.
#addopts = "--disable-socket --allow-hosts=127.0.0.1,localhost,huggingface.co"

[tool.pytest_env]
MONGO_DATABASE_HOST = "mongodb://test_user:test_password@127.0.0.1:27018"
MONGO_DATABASE_NAME = "llm-twin-test"
QDRANT_DATABASE_PORT = 6335
# Sagemaker SDK complains without this.
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "python"

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.importlinter]
root_packages = ["llm_twin", "testing", "tests"]

[[tool.importlinter.contracts]]
name = "Root packagess"
type = "layers"
layers = [
    "tests",
    "testing",
    "llm_twin",
]

[[tool.importlinter.contracts]]
name = "Top level layers"
type = "layers"
containers = "llm_twin"
layers = [
    "interfaces",
    "orchestration",
    "config",
    "infrastructure",
    "domain",
    "utils",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Domain layer"
type = "layers"
containers = "llm_twin.domain"
layers = [
    "training | evaluation | rag",
    "dataset_generation",
    "feature_engineering",
    "etl",
    "authors",
    "models | storage",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "ETL subdomain"
type = "layers"
containers = "llm_twin.domain.etl"
layers = [
    "crawling",
    "raw_documents",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Feature engineering subdomain"
type = "layers"
containers = "llm_twin.domain.feature_engineering"
layers = [
    "embedding",
    "chunking",
    "cleaning",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Storage subdomain"
type = "independence"
modules = [
    "llm_twin.domain.storage.document",
    "llm_twin.domain.storage.vector",
]

[[tool.importlinter.contracts]]
name = "Orchestration layer"
type = "layers"
containers = "llm_twin.orchestration"
layers = [
    "pipelines",
    "steps",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Orchestration steps"
type = "independence"
modules = [
    "llm_twin.orchestration.steps.etl",
    "llm_twin.orchestration.steps.feature_engineering",
]

[[tool.importlinter.contracts]]
name = "Testing package layers"
type = "layers"
containers = "testing"
layers = [
    "helpers",
    "factories",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Tests package layers"
type = "layers"
containers = "tests"
layers = [
    "functional | integration | unit | conftest"
]
exhaustive = true

[tool.ruff]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
# Sections
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["llm_twin", "tests"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"]  # Allow 'unused' imports in __init__.py files.
